# LRA-binpacking-expe

./: .gitignore  README.md  default.nix  requirements.txt
Binpack_CPP/: CMakeLists.txt  FindGUROBI.cmake
Binpack_CPP/src/: CMakeLists.txt  lower_bounds.cpp  lower_bounds.hpp  main_batchTS.cpp  main_density2D.cpp  main_densityTS.cpp  main_gurobi.cpp  main_large2D.cpp  main_largeTS.cpp  main_scalabilityTS.cpp
Binpack_CPP/src/Binpack_lib/: CMakeLists.txt  application.cpp  application.hpp  bins.cpp  bins.hpp  csv.h  csv.hpp  instance.cpp  instance.hpp
Binpack_CPP/src/algos/: algos2D.cpp  algos2D.hpp  algosTS.cpp  algosTS.hpp
data/TClab/: TClab_dataset_2D.csv
data/analysis_scripts/: exp_result_analysis-icdcs22pagefit.ipynb  exp_result_analysis-pagefit.ipynb  exp_result_analysis.ipynb  exp_result_analysis_for_ipdps.ipynb
data/generation_scripts/: generate_higher_density.py  generate_large_scale.py  generate_scalability.py  graph_utils.py
data/results/: batchTS_64_128.csv  density2D_64_128.csv  densityTS_64_128.csv  large2D_64_128.csv  large2D_refine_64_128.csv  largeTS_64_128.csv  largeTS_spread_64_128.csv  scalabilityTS_64_128.csv
data/scripts/: generate_TClab_dataset.py  generate_higher_density.py  generate_large_scale.py
